# cloudwatch-event-to-slack

./: .gitignore  main.tf  variables.tf
lambdas/post-to-slack/: Dockerfile  main.py  pyproject.toml  tasks.py
