[tool.poetry]
name = "post-to-slack"
version = "0.1.0"
description = ""
authors = ["Andy Huynh <andy.huynh312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
invoke = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
